# loqui

./: Cargo.toml  LICENSE  README.md  client.sh  justfile  libraries.md  libraries.txt  main.ts  operations_and_events.md  run.sh
.github/workflows/: ci.yml
src/: db.rs  db.ts  deps.ts  index.ts  main.rs  operations.ts  socket.ts  util.ts
src/operations/: authenticate.ts  channel_create.ts  index.ts  message.ts  my_info.ts  register.ts  whois.ts
tests/: db.test.ts  operations.test.ts  test_deps.ts  util.test.ts
tests/operations/: my_info.test.js  whois.test.js
