[package]
name = "loqui"
version = "0.1.0"
authors = ["Celeo <mattboulanger@fastmail.com>"]
edition = "2021"
description = ""
readme = "README.md"
homepage = "https://github.com/celeo/loqui"
repository = "https://github.com/celeo/loqui"
license = "MIT OR Apache-2.0"
exclude = [
  ".github"
]
keywords = []
categories = [
  "command-line-utilities"
]

[dependencies]
anyhow = "1.0.31"
axum = "0.4.2"
fern = "0.6.0"
headers = "0.3.5"
log = "0.4.8"
tokio = { version = "1.14.0", features = ["full"] }
tower-http = { version = "0.2.0", features = ["fs", "trace"] }
