[package]
name = "loqui"
version = "0.1.0"
authors = ["Celeo <mattboulanger@fastmail.com>"]
edition = "2021"
description = ""
readme = "README.md"
homepage = "https://github.com/celeo/loqui"
repository = "https://github.com/celeo/loqui"
license = "MIT OR Apache-2.0"
exclude = [
  ".github"
]
keywords = []
categories = [
  "command-line-utilities"
]

[dependencies]
anyhow = "1.0.31"
args = "2.2.0"
axum = { version = "0.4.2", features = ["ws", "headers"] }
fern = { version = "0.6.0", features = ["colored"] }
getopts = "0.2.21"
headers = "0.3.5"
log = "0.4.8"
tokio = { version = "1.14.0", features = ["full"] }
