[package]
name = "loqui"
version = "0.1.0"
authors = ["Celeo <mattboulanger@fastmail.com>"]
edition = "2021"
description = ""
readme = "README.md"
homepage = "https://github.com/celeo/loqui"
repository = "https://github.com/celeo/loqui"
license = "MIT OR Apache-2.0"
exclude = [
  ".github"
]
keywords = []
categories = [
  "command-line-utilities"
]

[dependencies]
anyhow = "1.0.31"
args = "2.2.0"
axum = { version = "0.4.2", features = ["ws", "headers"] }
bcrypt = "0.10.1"
chrono = { version = "0.4.19", features = ["serde"] }
fern = { version = "0.6.0", features = ["colored"] }
futures = "0.3.19"
log = "0.4.8"
rusqlite = { version = "0.26.3", features = ["chrono", "uuid"] }
serde = { version = "1.0.131", features = ["derive"] }
tokio = { version = "1.14.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4"] }
